# aws-event-stream-parser-rs

./: Cargo.toml  LICENSE  changelog.md  readme.md
src/: lib.rs
tests/: lib.rs
