[package]
name = "aws_event_stream_parser"
version = "0.1.0"
license = "MIT"
readme = "readme.md"
description = "Rust implementation of the vnd.amazon.event-stream binary format"
repository = "https://github.com/emblica/aws-event-stream-parser-rs"
authors = ["Teemu Heikkilä <teemu@emblica.fi>"]
edition = "2018"
exclude = [
    "doc/*"
]

[dependencies]
nom = "5"
crc = "1"
byteorder = "1"
chrono = "0.4"
uuid = "0.8"
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1"

[dev-dependencies]
hex-literal = "0.3"
